tests/errors/string_escape_unicode_char.error
parse error at line 2 column 1 for Tag:
'\u{fg}'
^